# Digital-Inspector

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  calibration.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  asr.py  classify.py  complaint.py  extractors.py  main.py  pulse.py  pyproject.toml  risk.py  safety.py
backend/mocks/: sample_response.json
backend/tests/: test_safety.py
data/: .gitignore  01_download.py  02_normalize.py  02b_family_pass.py  02c_recover_none.py  03_weak_label_stages.py  03b_add_victim_turns.py  03c_stage_label_augmented.py  04_augment.py  04b_regen_parcel_courier.py  05_split.py  06_demo_audio.py  README.md  digital_arrest_playbook.md  groq_batch.py  pyproject.toml
data/processed/: eval.jsonl
deploy/: .gitattributes  README.md
deploy/digitalocean/: .env.example  Caddyfile  DEPLOY.md  compose.yaml
frontend/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/components/: AppProviders.tsx  LandingHero.tsx  SiteFooter.tsx  SiteHeader.tsx  Waveform.tsx
frontend/lib/: api.ts  complaint-pdf.ts  cyber-landscape-data.ts  scam-content.ts  storage.ts  use-count-up.ts
training/: baseline_tfidf.py  e5_integration_evaluation.json  evaluate_onnx.py  evaluate_stage_onnx.py  onnx_evaluation.json  stage_onnx_evaluation.json  test_onnx_integration.py  train_and_export.ipynb
(+5 files in other folders)
