[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "faster-whisper>=1.1",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "tokenizers>=0.22.2",
    "transformers>=4.48",
    "uvicorn[standard]>=0.51.0",
]
