[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "edge-tts>=7.2.8",
    "groq>=1.5.0",
    "huggingface-hub>=1.23.0",
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tqdm>=4.68.4",
]
